test-suite/output/bug_4900.v
Fail Timeout 1 Check ltac:(repeat pose proof I).
Timeout 1 Fail Check ltac:(repeat pose proof I).
